// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tool get should get from map 1`] = `
".output {
  result: value; }
"
`;

exports[`Tool get should get from nested map 1`] = `
".output {
  result: depth2Value; }
"
`;

exports[`Tool get should throw on non-map value 1`] = `"[ekzo-get]: cannot search property \`depth2\` in non-map value, \`string\` provided"`;

exports[`Tool get should throw on wrong key 1`] = `"[ekzo-get]: cannot find property \`depth2\` in specified map"`;
